# break-stack

./: .gitignore  Cargo.toml  README.md
break_stack/: Cargo.toml
break_stack/src/: auth.rs  components.rs  controllers.rs  errors.rs  hot_reload.rs  lib.rs  models.rs  routes.rs  utils.rs
break_stack_macros/: Cargo.toml
break_stack_macros/src/: bundle_files.rs  component_derive.rs  lib.rs  model_derive.rs  utils.rs
e2e/: Dockerfile  package.json  playwright.config.js
examples/todo/: Cargo.toml
examples/todo/migrations/: 0001_init.sql
examples/todo/src/: components.rs  controllers.rs  main.rs  models.rs  routes.rs
examples/todo/templates/: layout.html
testing/: Cargo.toml
testing/tests/: askama_filters.rs  controllers.rs  derive_component.rs  serde.rs
