[package]
name = "break_stack"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.9"
break_stack_macros = { path = "../break_stack_macros" }
sqlx = { version = "0.8.2", features = ["macros", "migrate", "runtime-tokio", "sqlite", "chrono"] }
thiserror = "1.0.65"

