[package]
name = "testing"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.9"
break_stack = { path = "../break_stack" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["macros", "migrate", "runtime-tokio", "sqlite", "chrono"] }
http-body-util = "0.1.2"
