[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
break_stack = { path = "../../break_stack" }
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["macros", "migrate", "runtime-tokio", "sqlite", "chrono"] }
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.9"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
